--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+  
+  <head> 
+    
+  </head>
+  
+  <body>
+  <h1>hi, SYCO clan</h1> 
+  </body>                                              
+ 
+</html>
