--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   </head>
   
   <body>
+    
   <h1>hi, SYCO clan</h1> 
+  
+    <h2>We play Halo </h2>
+   
+    <p>My clan loves to play Halo all the time<p> 
+  
   </body>                                              
  
 </html>
